- added a new LookAheadPitchTracker, which uses a fixed look-ahead (right context). this superseedes OptimizingPitchTracker (which uses a look-ahead of 0) and Non-IncrOptimizingPitchTracker (which uses a look-ahead of infinity). I set the config.xml to default to a laaarge look-ahead (enough to completely cover audio files that are 244 days long) - removed NonIncrOptimizingPitchTracker and OptimizingPitchTracker
git-svn-id: svn+ssh://gate.spectrum.uni-bielefeld.de/homes/tbaumann/inpro-svnrepo/trunk@1008 19460358-522e-0410-942e-fdb976ae3ca2